# kde2-kdebase

./: .cvsignore  CMakeLists.txt  Makefile.in  mkpamserv  startkde
CVS/: Entries
applnk/: CMakeLists.txt  Makefile.in
applnk/CVS/: Entries  Repository
drkonqi/: .cvsignore  CMakeLists.txt  Makefile.in
drkonqi/CVS/: Entries  Repository
drkonqi/debuggers/: Makefile.in  gdbrc
drkonqi/debuggers/CVS/: Entries  Repository
drkonqi/pics/: Makefile.in
drkonqi/pics/CVS/: Entries  Repository
drkonqi/presets/: Makefile.in
drkonqi/presets/CVS/: Entries  Repository
kcontrol/kcontrol/: .cvsignore  CMakeLists.txt  KControl.desktop  Makefile.in  kcminit.cpp
kcontrol/kcontrol/CVS/: Entries  Repository
kcontrol/kcontrol/pics/: Makefile.in
kcontrol/kcontrol/pics/CVS/: Entries  Repository
kdebugdialog/: .cvsignore  CMakeLists.txt  Makefile.in  main.cpp
kdebugdialog/CVS/: Entries  Repository
kdesktop/: .cvsignore  CMakeLists.txt  Makefile.in  desktop.cc  krootwm.cc  minicli.cpp
kdesktop/CVS/: Entries  Repository
kdesktop/init/: Makefile.in
kdesktop/init/CVS/: Entries  Repository
kdesktop/init/Templates/: Makefile.in
kdesktop/init/Templates/CVS/: Entries  Repository
kdesktop/kwebdesktop/: .cvsignore  Makefile.in
kdesktop/kwebdesktop/CVS/: Entries  Repository
kdesktop/patterns/: Makefile.in
kdesktop/patterns/CVS/: Entries  Repository
kdesktop/pics/: CMakeLists.txt  Makefile.in
kdesktop/pics/CVS/: Entries  Repository
kdesktop/programs/: Makefile.in
kdesktop/programs/CVS/: Entries  Repository
kioslave/: CMakeLists.txt  Makefile.in
kioslave/CVS/: Entries  Repository
kioslave/audiocd/: Makefile.in
kioslave/audiocd/CVS/: Entries  Repository
kioslave/audiocd/kcmaudiocd/: .cvsignore  Makefile.in
kioslave/audiocd/kcmaudiocd/CVS/: Entries  Repository
kioslave/filter/: Makefile.in
kioslave/filter/CVS/: Entries  Repository
kioslave/finger/: Makefile.in
kioslave/finger/CVS/: Entries  Repository
kioslave/floppy/: Makefile.in
kioslave/floppy/CVS/: Entries  Repository
kioslave/gopher/: .cvsignore  Makefile.in  gopher.cc  gopher.h
kioslave/gopher/CVS/: Entries  Repository
kioslave/imap4/: Makefile.in
kioslave/imap4/CVS/: Entries  Repository
kioslave/info/: .cvsignore  Makefile.in
kioslave/info/CVS/: Entries  Repository
kioslave/ldap/: .cvsignore  Makefile.in
kioslave/ldap/CVS/: Entries  Repository
kioslave/man/: CMakeLists.txt  Makefile.in
kioslave/man/CVS/: Entries  Repository
kioslave/nfs/: .cvsignore  Makefile.in  kio_nfs.cpp
kioslave/nfs/CVS/: Entries  Repository
kioslave/nntp/: Makefile.in
kioslave/nntp/CVS/: Entries  Repository
kioslave/pop3/: .cvsignore  Makefile.in
kioslave/pop3/CVS/: Entries  Repository
kioslave/smb/: Makefile.in
kioslave/smb/CVS/: Entries  Repository
kioslave/smbro/: Makefile.in
kioslave/smbro/CVS/: Entries  Repository
kioslave/smtp/: .cvsignore  Makefile.in  smtp.cc
kioslave/smtp/CVS/: Entries  Repository
kioslave/tar/: .cvsignore  Makefile.in
kioslave/tar/CVS/: Entries  Repository
kioslave/thumbnail/: CMakeLists.txt  Makefile.in
kioslave/thumbnail/CVS/: Entries  Repository
konqueror/client/: .cvsignore  CMakeLists.txt  Makefile.in  kfmclient.cc
konqueror/client/CVS/: Entries  Repository
konqueror/keditbookmarks/: .cvsignore  CMakeLists.txt  Makefile.in
konqueror/keditbookmarks/CVS/: Entries  Repository
konqueror/pics/: CMakeLists.txt  Makefile.in
konqueror/pics/CVS/: Entries  Repository
konqueror/pics/actions/: CMakeLists.txt  Makefile.in
konqueror/pics/actions/CVS/: Entries  Repository
konqueror/pics/indicators/: Makefile.in
konqueror/pics/indicators/CVS/: Entries  Repository
konqueror/pics/tiles/: Makefile.in
konqueror/pics/tiles/CVS/: Entries  Repository
konqueror/sidebar/: .cvsignore  CMakeLists.txt  Makefile.in
konqueror/sidebar/CVS/: Entries  Repository
konqueror/sidebar/sidebar_classic/: .cvsignore  CMakeLists.txt  Makefile.in
konqueror/sidebar/sidebar_classic/CVS/: Entries  Repository
konqueror/sidebar/test/: Makefile.in
konqueror/sidebar/test/CVS/: Entries  Repository
konqueror/sidebar/trees/: CMakeLists.txt  Makefile.in  libkonqsidebar_tree.la.in
konqueror/sidebar/trees/CVS/: Entries  Repository
konqueror/sidebar/trees/bookmark_module/: CMakeLists.txt  Makefile.in
konqueror/sidebar/trees/dirtree_module/: CMakeLists.txt  Makefile.in
konqueror/sidebar/trees/history_module/: .cvsignore  CMakeLists.txt  Makefile.in
konqueror/sidebar/trees/init/: Makefile.in
konsole/src/: .cvsignore  CMakeLists.txt  Makefile.in  TEPty.C
konsole/src/CVS/: Entries  Repository
kpager/: .cvsignore  CMakeLists.txt  Makefile.in  kpager.cpp  kpager.desktop
kpager/CVS/: Entries  Repository
kscreensaver/kdesavers/: CMakeLists.txt  KBanner.desktop  KBlob.desktop  KLines.desktop  KMatrix.desktop  KPolygon.desktop  KScience.desktop  Makefile.in
kscreensaver/kdesavers/CVS/: Entries  Repository
ksysguard/gui/: .cvsignore  CMakeLists.txt  KSysGuardApplet.cc  Makefile.in  ProcessList.cc  SensorAgent.cc  SensorShellAgent.cc  SensorSocketAgent.cc  Workspace.cc  ksysguard.cc  ksysguard.desktop
ksysguard/gui/CVS/: Entries  Repository
kwin/clients/: CMakeLists.txt  Makefile.in
kwin/clients/CVS/: Entries  Repository
kwin/clients/b2/: Makefile.in
kwin/clients/default/: Makefile.in
kwin/clients/icewm/: CMakeLists.txt  Makefile.in
kwin/clients/kde/: Makefile.in
kwin/clients/kde1/: Makefile.in
kwin/clients/kstep/: Makefile.in
kwin/clients/kwmtheme/: Makefile.in
kwin/clients/laptop/: Makefile.in
kwin/clients/modernsystem/: Makefile.in
kwin/clients/mwm/: Makefile.in
kwin/clients/quartz/: Makefile.in
kwin/clients/redmond/: Makefile.in
kwin/clients/riscos/: CMakeLists.txt  Makefile.in
kwin/clients/system/: Makefile.in
kwin/clients/web/: CMakeLists.txt  Makefile.in
libkonq/: .cvsignore  CMakeLists.txt  Makefile.in
libkonq/CVS/: Entries  Repository
libkonq/favicons/: .cvsignore  Makefile.in
libkonq/favicons/CVS/: Entries  Repository
libkonq/pics/: Makefile.in
libkonq/pics/CVS/: Entries  Repository
(+1300 files in other folders)
