install(FILES applications.desktop  DESTINATION "${KDE2_APPSDIR}/Applications/.directory")
install(FILES development.desktop  DESTINATION "${KDE2_APPSDIR}/Development/.directory")

install(FILES games.desktop  DESTINATION "${KDE2_APPSDIR}/Games/.directory")
install(FILES games-arcade.desktop  DESTINATION "${KDE2_APPSDIR}/Games/Arcade/.directory")
install(FILES games-board.desktop  DESTINATION "${KDE2_APPSDIR}/Games/Board/.directory")
install(FILES games-card.desktop  DESTINATION "${KDE2_APPSDIR}/Games/Card/.directory")
install(FILES games-tacticstrategy.desktop  DESTINATION "${KDE2_APPSDIR}/Games/TacticStrategy/.directory")

install(FILES graphics.desktop  DESTINATION "${KDE2_APPSDIR}/Graphics/.directory")
install(FILES multimedia.desktop  DESTINATION "${KDE2_APPSDIR}/Multimedia/.directory")

install(FILES system.desktop  DESTINATION "${KDE2_APPSDIR}/System/.directory")
install(FILES system-screensavers.desktop  DESTINATION "${KDE2_APPSDIR}/System/ScreenSavers/.directory")
install(FILES system-terminal.desktop  DESTINATION "${KDE2_APPSDIR}/System/Terminal/.directory")

install(FILES internet.desktop  DESTINATION "${KDE2_APPSDIR}/Internet/.directory")
install(FILES internet-terminal.desktop  DESTINATION "${KDE2_APPSDIR}/Internet/Terminal/.directory")

install(FILES utilities.desktop  DESTINATION "${KDE2_APPSDIR}/Utilities/.directory")
install(FILES office.desktop  DESTINATION "${KDE2_APPSDIR}/Office/.directory")
install(FILES editors.desktop  DESTINATION "${KDE2_APPSDIR}/Editors/.directory")
install(FILES toys.desktop  DESTINATION "${KDE2_APPSDIR}/Toys/.directory")

install(FILES settings.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/.directory")
install(FILES settings-looknfeel.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/LookNFeel/.directory")
install(FILES settings-information.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Information/.directory")
install(FILES settings-sound.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Sound/.directory")
install(FILES settings-peripherals.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Peripherals/.directory")
install(FILES settings-filebrowsing.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/FileBrowsing/.directory")
install(FILES settings-webbrowsing.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/WebBrowsing/.directory")
install(FILES settings-power.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/PowerControl/.directory")
install(FILES settings-person.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Personalization/.directory")
install(FILES settings-help.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Help/.directory")
install(FILES settings-network.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Network/.directory")
install(FILES settings-system.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/System/.directory")
install(FILES settings-databases.desktop  DESTINATION "${KDE2_APPSDIR}/Settings/Databases/.directory")
install(FILES wordprocessing.desktop  DESTINATION "${KDE2_APPSDIR}/WordProcessing/.directory")

