kde2_module(kio_gopher SOURCES gopher/gopher.cc LIBS kde2::kio kde2::ksycoca)

#add_subdirectory(filter)
#add_subdirectory(info)
#add_subdirectory(man)
#add_subdirectory(nfs)
#add_subdirectory(nntp)
#add_subdirectory(pop3)
#add_subdirectory(imap4)
#add_subdirectory(smbro)
#add_subdirectory(tar)
#add_subdirectory(finger)
#add_subdirectory(thumbnail)
#add_subdirectory(ldap)
#add_subdirectory(smb)

# Needs cdparanoia, libvorbis and lame at least
#add_subdirectory(audiocd)

# Needs mtools, which it just calls
#add_subdirectory(floppy)
